Jan 11 01:41 updated bashrc with alias and adjusted Sam's ctrl B in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -14,10 +14,10 @@ setw -g mode-keys vi
 setw -g mouse off
 
 # splitting
-unbind %    # remove default vertical split binding
-unbind '"'  # remove default horizontal split binding
-bind | split-window -h
-bind - split-window -v
+#unbind %    # remove default vertical split binding
+#unbind '"'  # remove default horizontal split binding
+#bind | split-window -h
+#bind - split-window -v
 
 # window title
 set -g set-titles on
